[package]
name = "piiscrub"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Ruckley <rruckley@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.1"
rocket = "0.5.0-rc.2"
strum = "0.24.1"
strum_macros = "0.24.3"
tokio = "1.25.0"
